[package]
name = "mfm-rs"
version = "2024.5.0-alpha.0" # YYYY.M.p-sem.b
edition = "2021"
authors = ["Hoto Ras <hotoras03@gmail.com>"]
repository = "https://github.com/HotoRas/misskey.rs.git"
homepage = "https://github.com/HotoRas/misskey.rs"
description = "Core traits and types in misskey"
# documentation = "todo"
readme = "README.md"
license = "MIT"
keywords = ["async", "server", "client", "misskey"]

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
mime = "0.3"
serde_json = "1.0"
futures-core = "0.3"
futures-sink = "0.3"